<resources>
    <string name="app_name">PM_App</string>
    <string name="SignIn_Register">Sign In/Register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="RegisterAcct">Register for Account</string>
    <string name="LastName">Last Name</string>
    <string name="CreateAccount">Create Account</string>
    <string name="FirstName">First Name</string>
    <string name="AddMember">Add Member</string>
    <string name="ProfilePicture">Profile Picture</string>
    <string name="SearchUser">Search For User</string>
    <string name="enterUser">Enter User to Search for</string>
    <string name="CreateTask">Create Task</string>
    <string name="Settings">Settings</string>
    <string name="TimeDue">Time Due</string>
    <string name="DaysLeft">Days Left</string>
    <string name="DueDate">Due Date</string>
    <string name="TeamMembers">Team Members</string>
    <string name="Tasks">Tasks</string>
    <string name="Projects">Projects</string>
    <string name="CreateProject">Create Project</string>
    <string name="Logout">Logout</string>
    <string name="Name">Name</string>
    <string name="ChangeIcon">Change Icon</string>
    <string name="Confirm">Confirm</string>
    <string name="TaskName">Task Name</string>
    <string name="DateFormat">MM/DD/YYYY</string>
    <string name="ProjectName">Project Name</string>
    <string name="TeamName">Team Name</string>/>
</resources>