<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bkg_createacct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCDDBC">

    <EditText
        android:id="@+id/et_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        android:textColor="@color/banner"
        app:layout_constraintBottom_toTopOf="@+id/et_lname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="textPersonName"
        android:textColor="@color/banner"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_fname" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:textColor="@color/banner"
        app:layout_constraintBottom_toTopOf="@+id/et_pword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lname" />

    <Button
        android:id="@+id/btn_createacct"
        android:layout_width="265dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="151dp"
        android:text="@string/CreateAccount"
        android:textColor="@color/banner"
        android:backgroundTint="#B8D8BA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pword" />

    <EditText
        android:id="@+id/et_pword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />
</androidx.constraintlayout.widget.ConstraintLayout>